# libcstrings

./: .gitmodules  CMakeLists.txt
include/: cstrings.h
src/: cstrings.c  string_cat.c  string_cmp.c  string_dup.c  string_from_chars.c  string_len.c  string_new.c
test/: creation.c
